--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<html>
+<!DOCTYPE html>
   <head>
     <title>Introduction To Canvas</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
   </head>
-  <body>
-    <h1>Intro To Canvas</h1>
-    <canvas id="intro" width="150" height="150"></canvas>
-    <script src="js/canvs.js"></script>
+  <body onload="draw();">
+    <header>
+      <h1>Intro to Canvas</h1>
+    </header>
+    <canvas id="intro" width=900 height=600></canvas>
+    <script src="js/canvas.js"></script>
   </body>
 </html>
